Fix bug 371925 -- we need to allow for the case when the prev sibling is at index 0.  r=bernd, sr=roc